# subs-counter-front

./: .gitignore  README.md  manage.py  pyproject.toml
Subs_counter_front/: asgi.py  settings.py  urls.py  wsgi.py
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
static/css/: styles.css
static/js/: config.js  scripts.js  utils.js
subs_manager/: apps.py  views.py
subs_manager/templatetags/: __init__.py  custom_filters.py
templates/subs_manager/: analytics.html  base.html  daily_statistics.html  error.html  real_time_statistics.html
